Bug 211571 - Bluetooth: hci0: don't support firmware rome 0x1020200
Summary: Bluetooth: hci0: don't support firmware rome 0x1020200
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Bluetooth (show other bugs)
Hardware: Intel Linux
: P1 normal
Assignee: linux-bluetooth@vger.kernel.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-05 00:26 UTC by dilipkonline
Modified: 2021-04-03 11:20 UTC (History)
5 users (show)

See Also:
Kernel Version: 5.10.11-200 (most of 5.10.x)
Subsystem:
Regression: No
Bisected commit-id:


Attachments
this is a trial fixing patch (1.92 KB, application/mbox)
2021-02-08 04:55 UTC, Hui Wang
Details

Description dilipkonline 2021-02-05 00:26:55 UTC
Using fedora 33 and fedora repos only for upgrades

Ever since I moved to 5.10.x series the bluetooth had stopped working.

From journalctl I get the following error,

kernel: usb 1-1.1: new full-speed USB device number 7 using ehci-pci
kernel: usb 1-1.1: New USB device found, idVendor=13d3, idProduct=3362, bcdDevice= 0.02
kernel: usb 1-1.1: New USB device strings: Mfr=1, Product=2, SerialNumber=3
kernel: usb 1-1.1: Product: Bluetooth USB Host Controller
kernel: usb 1-1.1: Manufacturer: Atheros Communications
kernel: usb 1-1.1: SerialNumber: Alaska Day 2006
kernel: Bluetooth: hci0: don't support firmware rome 0x1020200


If I boot to previous kernel version 5.9.x, it works out of the box.
Comment 1 dilipkonline 2021-02-05 00:28:04 UTC
Extras:

System Information
	Manufacturer: ASUSTeK COMPUTER INC.
	Product Name: K55VM
Comment 2 sinekonata 2021-02-08 00:20:07 UTC
I have the same problem 

sudo dmesg |grep Bluetooth
[    1.376617] usb 1-1.1: Product: Bluetooth USB Host Controller
[   13.557022] Bluetooth: Core ver 2.22
[   13.557043] Bluetooth: HCI device and connection manager initialized
[   13.557047] Bluetooth: HCI socket layer initialized
[   13.557050] Bluetooth: L2CAP socket layer initialized
[   13.557054] Bluetooth: SCO socket layer initialized
[   13.623406] Bluetooth: hci0: don't support firmware rome 0x1020200
[   18.084063] Bluetooth: BNEP (Ethernet Emulation) ver 1.3
[   18.084067] Bluetooth: BNEP filters: protocol multicast
[   18.084072] Bluetooth: BNEP socket layer initialized
Comment 3 sinekonata 2021-02-08 00:29:10 UTC
Extras:

sudo dmesg|grep DMI:
[    0.000000] DMI: ASUSTeK COMPUTER INC. K56CA/K56CA, BIOS K56CA.208 11/13/2012(In reply to sinekonata from comment #2)
Comment 4 Hui Wang 2021-02-08 04:55:58 UTC
Created attachment 295107 [details]
this is a trial fixing patch

This is a trial fixing patch
Comment 5 Hui Wang 2021-02-08 04:59:22 UTC
And the testing kernel is here: https://people.canonical.com/~hwang4/btfix/
Comment 6 Helber Maciel Guerra 2021-02-11 15:12:12 UTC
I have tested this patch and works using latest kernel source:

commit 291009f656e8eaebbdfd3a8d99f6b190a9ce9deb (HEAD -> master, origin/master)
Merge: a3961497bd9c d11a1d08a082
Author: Linus Torvalds <torvalds@linux-foundation.org>
Date:   Wed Feb 10 12:03:35 2021 -0800
Comment 7 Salvatore Bonaccorso 2021-02-13 06:59:23 UTC
This is the same as https://bugzilla.kernel.org/show_bug.cgi?id=210681?
Comment 8 dilipkonline 2021-02-14 05:52:12 UTC
Thanks Hui and Helber,
I am still waiting for the Fedora team to push the kernel package as I do not wish to perform the manual compilation and wish to stick on with the distro repo.
I guess 5.11 release will have this fixed.
Comment 9 dilipkonline 2021-04-03 11:19:55 UTC
This is fixed now. Using kernel version - 5.10.22-200.fc33.x86_64 without any issues. Thank you all.

Note You need to log in before you can comment on or make changes to this bug.